UY-1532 do not use deprecated new URL(String)